--- a/web/CSS/sidebar/sb_right.css
+++ b/web/CSS/sidebar/sb_right.css
@@ -1,5 +1,5 @@
 .sidebarRight {
-    width: 400px;
+    width: 450px;
     background-color: var(--sidebar-bg);
     padding: 1rem;
     box-shadow: -3px 0 17px 0px rgb(171 171 171);
@@ -38,7 +38,7 @@
 }
 
 .sidebar-right-disabled {
-    margin-right: -420px;
+    margin-right: -470px;
 }
 
 .tab-list {
@@ -123,4 +123,8 @@
     transform: translateY(-2px);
     box-shadow: 0px 7px 15px 0px #a3a3a3;
 
+}
+
+.tab {
+    flex-direction: column;
 }
